--- a/memory/fs4net.Memory.Test/fs4net.Memory.Test.csproj
+++ b/memory/fs4net.Memory.Test/fs4net.Memory.Test.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Creation\AllDrivesFixture.cs" />
     <Compile Include="Creation\CreateSpecialFolderDirectoryFixture.cs" />
+    <Compile Include="Creation\PathWasherFixture.cs" />
     <Compile Include="Directory\CreateFixture.cs" />
     <Compile Include="Directory\DeleteIfEmptyFixture.cs" />
     <Compile Include="Directory\DeleteRecursivelyFixture.cs" />
