Replace duplicate AssertThrows for Should.Throw. Rewriting canonical path generating algorithm.

--- a/testtemplates/fs4net.TestTemplates/fs4net.TestTemplates.csproj
+++ b/testtemplates/fs4net.TestTemplates/fs4net.TestTemplates.csproj
@@ -75,6 +75,7 @@
     <Compile Include="File\TryDeleteFixture.cs" />
     <Compile Include="PopulatedFileSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Should.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\builder\fs4net.Builder\fs4net.Builder.csproj">
