--- a/framework/fs4net.Framework/fs4net.Framework.csproj
+++ b/framework/fs4net.Framework/fs4net.Framework.csproj
@@ -60,7 +60,9 @@
     <Compile Include="Impl\DateTimeExtensions.cs" />
     <Compile Include="Impl\DriveParser.cs" />
     <Compile Include="Impl\FilenameParser.cs" />
+    <Compile Include="Impl\FoldersParser.cs" />
     <Compile Include="Impl\FolderUtils.cs" />
+    <Compile Include="Impl\Validator.cs" />
     <Compile Include="NullLogger.cs" />
     <Compile Include="Impl\StringExtensions.cs" />
     <Compile Include="Impl\ThrowHelper.cs" />
