--- a/framework/fs4net.Framework/fs4net.Framework.csproj
+++ b/framework/fs4net.Framework/fs4net.Framework.csproj
@@ -12,9 +12,8 @@
     <AssemblyName>fs4net.Framework</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SignAssembly>false</SignAssembly>
-    <AssemblyOriginatorKeyFile>
-    </AssemblyOriginatorKeyFile>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <OldToolsVersion>3.5</OldToolsVersion>
@@ -88,6 +87,9 @@
     <Compile Include="Utils\RootedFileUtilities.cs" />
     <Compile Include="RootedPathException.cs" />
     <Compile Include="Utils\ValidityCheckers.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="key.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
