--- a/Package.nuspec
+++ b/Package.nuspec
@@ -7,7 +7,7 @@
     <owners>Torbjörn Kalin</owners>
     <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</licenseUrl>
     <projectUrl>http://github.org/toroso/fs4net</projectUrl>
-    <iconUrl>http://github.org/toroso/fs4net/blob/master/logo32x32.png</iconUrl>
+    <iconUrl>http://github.com/toroso/fs4net/blob/master/logo32x32.png?raw=true</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>An encapsulation of the file system.</description>
     <copyright>Copyright 2010-2011 Torbjörn Kalin</copyright>
