--- a/Package.nuspec
+++ b/Package.nuspec
@@ -6,7 +6,7 @@
     <authors>Torbj&ouml;rn Kalin</authors>
     <owners>Torbj&ouml;rn Kalin</owners>
     <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</licenseUrl>
-    <projectUrl>http://github.org/toroso/fs4net</projectUrl>
+    <projectUrl>http://github.com/toroso/fs4net</projectUrl>
     <iconUrl>http://github.com/toroso/fs4net/blob/master/logo32x32.png?raw=true</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>An encapsulation of the file system. Makes it easy to fake the file system in your tests.</description>
