Move implementation of IInternalFileSystem to separate class to keep public API clean.

--- a/framework/fs4net.Framework/fs4net.Framework.csproj
+++ b/framework/fs4net.Framework/fs4net.Framework.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Impl\DateTimeExtensions.cs" />
     <Compile Include="Impl\DriveParser.cs" />
     <Compile Include="Impl\FilenameParser.cs" />
+    <Compile Include="Impl\FileSystemImpl.cs" />
     <Compile Include="Impl\FoldersParser.cs" />
     <Compile Include="Impl\FolderUtils.cs" />
     <Compile Include="Impl\Validator.cs" />
