--- a/memory/fs4net.Memory/fs4net.Memory.csproj
+++ b/memory/fs4net.Memory/fs4net.Memory.csproj
@@ -48,6 +48,8 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Impl\MemoryFileSystemImpl.cs" />
+    <Compile Include="Impl\PathParser.cs" />
     <Compile Include="Node\FileNode.cs" />
     <Compile Include="Node\FileSystemNode.cs" />
     <Compile Include="MemoryFileSystem.cs" />
