--- a/Package.nuspec
+++ b/Package.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>fs4net</id>
-    <version>0.3</version>
+    <version>0.4</version>
     <authors>Torbjörn Kalin</authors>
     <owners>Torbjörn Kalin</owners>
     <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</licenseUrl>
@@ -12,7 +12,7 @@
     <description>An encapsulation of the file system. Makes it easy to fake the file system in your tests.</description>
     <copyright>Copyright 2010-2011 Torbjörn Kalin</copyright>
     <tags>file directory filesystem file-system path test mock fake NUnit xUnit MSTest TDD BDD DDD</tags>
-	<releaseNotes>Bug fix: Allow creation of files and directories that start with a dot or space.</releaseNotes>
+	<releaseNotes>API change: Separated IInternalFileSystem from IFileSystem to allow using IInternalFileSystem in tests.</releaseNotes>
   </metadata>
     <files>
         <file src="framework\fs4net.Framework\bin\Release\fs4net.Framework.dll" target="lib/3.5" />
