--- a/framework/fs4net.Framework/fs4net.Framework.csproj
+++ b/framework/fs4net.Framework/fs4net.Framework.csproj
@@ -50,7 +50,6 @@
   <ItemGroup>
     <Compile Include="Drive.cs" />
     <Compile Include="FileName.cs" />
-    <Compile Include="FileSystemImpl.cs" />
     <Compile Include="IDirectory.cs" />
     <Compile Include="IFile.cs" />
     <Compile Include="IFileSystem.cs" />
@@ -62,6 +61,7 @@
     <Compile Include="Impl\DateTimeExtensions.cs" />
     <Compile Include="Impl\DriveParser.cs" />
     <Compile Include="Impl\FilenameParser.cs" />
+    <Compile Include="Impl\FileSystemImpl.cs" />
     <Compile Include="Impl\FoldersParser.cs" />
     <Compile Include="Impl\FolderUtils.cs" />
     <Compile Include="Impl\Validator.cs" />
