--- a/framework/fs4net.Framework/fs4net.Framework.csproj
+++ b/framework/fs4net.Framework/fs4net.Framework.csproj
@@ -76,6 +76,7 @@
     <Compile Include="NonRootedPathException.cs" />
     <Compile Include="Impl\PathUtils.cs" />
     <Compile Include="PathWashers.cs" />
+    <Compile Include="PathWashingFileSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelativeDirectory.cs" />
     <Compile Include="RelativeFile.cs" />
