--- a/testtemplates/fs4net.TestTemplates/fs4net.TestTemplates.csproj
+++ b/testtemplates/fs4net.TestTemplates/fs4net.TestTemplates.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Directory\DirectoriesFixture.cs" />
     <Compile Include="Directory\ExistsFixture.cs" />
     <Compile Include="Directory\FilesFixture.cs" />
+    <Compile Include="Directory\CreationTimeFixture.cs" />
     <Compile Include="Directory\LastAccessTimeFixture.cs" />
     <Compile Include="Directory\LastWriteTimeFixture.cs" />
     <Compile Include="Directory\MoveToFixture.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="File\CreateWriteStreamFixture.cs" />
     <Compile Include="File\DeleteFixture.cs" />
     <Compile Include="File\ExistsFixture.cs" />
+    <Compile Include="File\CreationTimeFixture.cs" />
     <Compile Include="File\LastAccessTimeFixture.cs" />
     <Compile Include="File\LastWriteTimeFixture.cs" />
     <Compile Include="File\MoveToFixture.cs" />
